# Tarea_3_corte_2

./: CMakeLists.txt  README.md
exercism/: bank_account.cpp  crypto_square.cpp
leetcode/: 1797_authentication_manager.cpp  3709_exam_tracker.cpp
